fixes contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ table {
 
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: whitesmoke; /* changes background color to fix contrast */
   margin: 0;
   padding: 0;
 }
